# SRBNMPC_HL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmakemake.sh  imgui.ini  runCodegen.sh  run_Raisim.sh
SRB_NMPC_Casadi_Formulation/: CMakeLists.txt  cmake_install.cmake
SRB_NMPC_Casadi_Formulation/include/: loco_structs.hpp  nlp_code.h  nmpc_params.h
SRB_NMPC_Casadi_Formulation/rsc/A1/: A1_modified_new.urdf
SRB_NMPC_Casadi_Formulation/rsc/A1/meshes/: calf.dae
SRB_NMPC_Casadi_Formulation/src/: casadiprint.cpp  nmpccodegen.cpp  usecodegen.cpp
dynamics/: dynamicsSupportFunctions.h
dynamics/A1/: A1_Dynamics.cpp  A1_Dynamics.h
dynamics/A1_New_wFoot/: A1_C.cpp  A1_D_B_G.cpp  A1_Dynamics.cpp  A1_Dynamics.h  A1_FK.cpp  A1_Jaco.cpp  A1_Jaco_dot.cpp
dynamics/A1_New_woFoot/: A1_Dynamics.cpp  A1_Dynamics.h
include/: EigenUtils.hpp  OtherUtils.hpp  Transforms.hpp  global_loco_opts.h  global_loco_structs.hpp  loco_structs.hpp  math_define.h  nmpc.hpp
matlab_scripts/: PlotHLReference.m
matlab_scripts/autoArrangeFigures/: autoArrangeFigures.m
optimization/iSWIFT/: READ ME.txt
optimization/iSWIFT/Examples/MPC Dense Formulation/3D/: ICRA_demo_ver2.slx
optimization/iSWIFT/Examples/MPC Sparse Formulation/2D/: MPCS_2D_Formulation.slx  Swift_sfunc_e.c  Swift_sfunc_e.mexw64
optimization/iSWIFT/Examples/MPC Sparse Formulation/3D/: MPCS_3D_Formulation.slx  Swift_sfunc_e.c  Swift_sfunc_e.mexw64  calculate_F.m  coeffR.m  coeffv.m  coeffw.m  coeffx.m  my_hat.m  my_params.m
optimization/iSWIFT/cpp_wrapper/: iswift_qp.cpp  iswift_qp.h  utils.h
optimization/iSWIFT/docs/iSWIFT docs/: $.aux  document.aux  document.blg  document.tex
optimization/iSWIFT/include/: GlobalOptions.h  Matrices_big.h  Matrices_small.h  Prime.h  timer.h
optimization/iSWIFT/ldl/include/: ldl.h
optimization/iSWIFT/ldl/src/: ldl.c
optimization/iSWIFT/matlab/: README.txt  Swift_cmex.c  Swift_cmex.m  Swift_mex.m  Swift_sfunc.c
optimization/iSWIFT/matlab/Ordering/: Matrices.mat  Ordering_Generator.m  myfile.txt
optimization/iSWIFT/src/: Auxilary.c  Prime.c  RUNQP.c  timer.c
raisimOgre_include/: guiState.hpp  helper2.hpp  raisimBasicImguiPanel.hpp  randyImguiPanel.hpp
rsc/: Dumbell_5lb.STL
rsc/A1/: A1_modified.urdf  A1_trunk.urdf
rsc/material/: ColoredChecker.m  myMaterials.material
src/: A1_Sim.cpp  nmpc.cpp
